# spine2d-animation-mcp

./: .gitignore  README.md  pyproject.toml
reference/: SkeletonJson.java
src/spine2d_mcp/: pipeline.py  server.py
src/spine2d_mcp/atlas/: packer.py  writer.py
src/spine2d_mcp/psd/: conventions.py  parser.py
src/spine2d_mcp/spine/: builder.py  schema.py  validator.py  writer.py
tests/: conftest.py  test_atlas.py  test_builder.py  test_e2e.py  test_schema.py  test_validator.py
